CUI: item-list / menu: make sure mutli-line item list buttons can wrap onto a new line

--- a/src/scss/themes/fylr/components/_item-list.scss
+++ b/src/scss/themes/fylr/components/_item-list.scss
@@ -23,7 +23,8 @@
 			// make sure the buttons could wrap onto new line
 			height: auto;
 			min-height: $item-list-height;
-
+			line-height: $line-height-sm;
+			
 			span {
 				white-space: normal;
 				overflow: hidden;
